Custom Exception Error Handling and Https Secure endpoints (#38)
* added missing annotations for spring boot startup

* restructure directory

* added a few logs

* added UT for service impl test

* updated data initializer for admin and user roles as first in database

* properly set role for RBAC set by security config

* update users api endpoint to accept request body and added necessary dtos

* cleanup User layer

* prefer application file config over annotation config

* prefer logger in service layer

* added custom error handling

* added auto generated task code to task items

* added task creation with sequential task code

* update task updating with task code and version

* update task deletion

* added https security for authenticate endpoint

* unable to redirect http to https but can use both